--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap");
 @import "tailwindcss";
-
-
-@font-face {
-  font-family: 'Larken';
-  src: url('/fonts/LarkenDEMO-Black.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
+@import "flowbite-react/plugin/tailwindcss";
+@source "../.flowbite-react/class-list.json";
+@import "flowbite/src/themes/default";
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,8 +15,36 @@
   }
 }
 
+/* PERSONAL STYLING */
+
+
+/* GENERAL */
+
+html,
+body {
+  height: 100%;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+
+  font-family: var(--font-almarai), system-ui, -apple-system, Segoe UI, Roboto,
+    Arial, sans-serif;
+}
+
+/* FONTS */
+.font-almarai {
+  font-family: var(--font-almarai), system-ui, -apple-system, Segoe UI, Roboto,
+    Arial, sans-serif;
+}
+
+.font-larken {
+  font-family: var(--font-larken), system-ui, -apple-system, Segoe UI, Roboto,
+    Arial, sans-serif;
+}
+
+.font-pecita {
+  font-family: var(--font-pecita), system-ui, -apple-system, Segoe UI, Roboto,
+  Arial, sans-serif;
 }
